examples/websocket-service-error-handling/websocket_service_error_handling.out
$ bal run websocket_service_error_handling.bal
error: error occurred
        at ChatService:onMessage(websocket_service_error_handling.bal:22)

