examples/websocket-service-error-handling/websocket_service_error_handling.metatags
description: BBE on how to secure WebSocket client with Basic Auth in Ballerina.
keywords: ballerina, ballerina by example, bbe, websocket, auth, basic auth
